@@ -7,28 +7,30 @@ Letter
 Single
 -2
 1200 2
+6 2070 540 7065 4987
 2 2 0 3 0 7 50 -1 -1 0.000 0 0 -1 0 0 5
-	 3813 576 7299 576 7299 1920 3813 1920 3813 576
+	 3318 566 5815 566 5815 1528 3318 1528 3318 566
 2 1 0 3 0 7 50 -1 -1 0.000 0 0 -1 1 0 2
-	0 0 2.00 97.50 193.50
-	 5520 3082 5520 1920
+	0 0 2.00 69.82 138.57
+	 4541 2360 4541 1528
 2 2 0 3 0 7 50 -1 -1 0.000 0 0 -1 0 0 5
-	 2106 3082 9006 3082 9006 4498 2106 4498 2106 3082
+	 2096 2360 7037 2360 7037 3374 2096 3374 2096 2360
 2 1 0 3 0 7 50 -1 -1 0.000 0 0 -1 1 0 2
-	0 0 2.00 97.50 193.50
-	 3232 5334 4321 4535
+	0 0 2.00 69.82 138.57
+	 2902 3973 3682 3401
 2 1 0 3 0 7 50 -1 -1 0.000 0 0 -1 1 0 2
-	0 0 2.00 97.50 193.50
-	 7880 5334 6718 4535
+	0 0 2.00 69.82 138.57
+	 6231 3973 5399 3401
 2 2 0 3 0 7 50 -1 -1 0.000 0 0 -1 0 0 5
-	 6718 5334 8969 5334 8969 6714 6718 6714 6718 5334
+	 5399 3973 7011 3973 7011 4961 5399 4961 5399 3973
 2 2 0 3 0 7 50 -1 -1 0.000 0 0 -1 0 0 5
-	 2143 5334 4394 5334 4394 6714 2143 6714 2143 5334
-4 1 0 50 -1 2 34 0.0000 4 345 2925 5411 3663 INTERFACE\001
-4 1 0 50 -1 2 30 0.0000 4 300 900 5483 1303 User\001
-4 1 0 50 -1 2 18 0.0000 4 255 4200 5338 4172 CinterfaceNameObjectConstructor\001
-4 1 0 50 -1 2 30 0.0000 4 75 315 5483 5987 ...\001
-4 1 0 50 -1 2 21 0.0000 4 150 180 7807 6399 n\001
-4 1 0 50 -1 2 21 0.0000 4 210 150 3232 6399 1\001
-4 1 0 50 -1 2 21 0.0000 4 285 2130 3285 5987 Implementation\001
-4 1 0 50 -1 2 21 0.0000 4 285 2130 7875 5987 Implementation\001
+	 2122 3973 3734 3973 3734 4961 2122 4961 2122 3973
+4 1 0 50 -1 2 24 0.0000 4 247 2095 4463 2776 INTERFACE\001
+4 1 0 50 -1 2 21 0.0000 4 215 645 4514 1086 User\001
+4 1 0 50 -1 2 13 0.0000 4 183 3008 4410 3141 CinterfaceNameObjectConstructor\001
+4 1 0 50 -1 2 21 0.0000 4 54 226 4514 4441 ...\001
+4 1 0 50 -1 2 15 0.0000 4 107 129 6178 4736 n\001
+4 1 0 50 -1 2 15 0.0000 4 150 107 2902 4736 1\001
+4 1 0 50 -1 2 15 0.0000 4 204 1525 2940 4441 Implementation\001
+4 1 0 50 -1 2 15 0.0000 4 204 1525 6227 4441 Implementation\001
+-6
